--- a/testPage.html
+++ b/testPage.html
@@ -37,10 +37,10 @@
 		<img src="Pipe5Final.png" width=400>
 	</a>
 	<a rel="ar" href="Reducer.usdz" >
-		<img src="ReducerFinal.png.png" width=400>
+		<img src="ReducerFinal.png" width=400>
 	</a>
 	<a rel="ar" href="tee.usdz" >
-		<img src="TeeFinal.png.png.png" width=400>
+		<img src="TeeFinal.png" width=400>
 	</a>
 
 </body>
