--- a/testPage.html
+++ b/testPage.html
@@ -42,6 +42,18 @@
 	<a rel="ar" href="tee.usdz" >
 		<img src="TeeFinal.png" width=400>
 	</a>
+	<a rel="ar" href="sharovaya.usdz" >
+		<img src="sharovayaFinal.png" width=400>
+	</a>
+	<a rel="ar" href="bends.usdz" >
+		<img src="bendsFinal.png" width=400>
+	</a>
+	<a rel="ar" href="obratnaya.usdz" >
+		<img src="obratnayaFinal.png" width=400>
+	</a>
+	<a rel="ar" href="zapornaya.usdz" >
+		<img src="zapornayaFinal.png" width=400>
+	</a>
 
 </body>
 </html>
