--- a/testPage.html
+++ b/testPage.html
@@ -54,6 +54,9 @@
 	<a rel="ar" href="zapornaya.usdz" >
 		<img src="zapornayaFinal.png" width=400>
 	</a>
+	<a rel="ar" href="SplitTee.usdz" >
+		<img src="SplitTeeFinal.png" width=400>
+	</a>
 
 </body>
 </html>
