--- a/testPage.html
+++ b/testPage.html
@@ -57,6 +57,12 @@
 	<a rel="ar" href="SplitTee.usdz" >
 		<img src="SplitTeeFinal.png" width=400>
 	</a>
+	<a rel="ar" href="diskovayawithletters.usdz" >
+		<img src="diskovayawithletters.png" width=400>
+	</a>
+	<a rel="ar" href="klinovayawithletters.usdz" >
+		<img src="klinovayawithletters.png" width=400>
+	</a>
 
 </body>
 </html>
