--- a/testPage.html
+++ b/testPage.html
@@ -63,6 +63,12 @@
 	<a rel="ar" href="klinovayawithletters.usdz" >
 		<img src="klinovayawithletters.png" width=400>
 	</a>
+	<a rel="ar" href="pipewithletters.usdz" >
+		<img src="pipeawithletters.png" width=400>
+	</a>
+	<a rel="ar" href="3dbendswithletters.usdz" >
+		<img src="3dbendswithletters.png" width=400>
+	</a>
 
 </body>
 </html>
