--- a/testPage.html
+++ b/testPage.html
@@ -64,7 +64,7 @@
 		<img src="klinovayawithletters.png" width=400>
 	</a>
 	<a rel="ar" href="pipewithletters.usdz" >
-		<img src="pipeawithletters.png" width=400>
+		<img src="pipewithletters.png" width=400>
 	</a>
 	<a rel="ar" href="3dbendswithletters.usdz" >
 		<img src="3dbendswithletters.png" width=400>
