--- a/testPage.html
+++ b/testPage.html
@@ -30,6 +30,10 @@
 	<a rel="ar" href="3dbends.usdz" >
 		<img src="3dbendsFinal.png" width=400>
 	</a>
+	</a>
+		<a rel="ar" href="Bends.usdz" >
+		<img src="Bends.png" width=400>
+	</a>
 	<a rel="ar" href="cap.usdz" >
 		<img src="CapFinal.png" width=400>
 	</a>
