--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -10,7 +10,7 @@
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 <!-- Use it like any other HTML element -->
 
-<model-viewer src="RobotExpressive.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls alt="A 3D model of an astronaut" skybox-image="aircraft_workshop_01_1k.hdr" ios-src="../shared-assets/models/Astronaut.usdz"></model-viewer>
+<model-viewer src="RobotExpressive.glb" ar ar-modes="webxr" ar-scale="auto" camera-controls alt="A 3D model of an astronaut" skybox-image="aircraft_workshop_01_1k.hdr" ios-src="../shared-assets/models/Astronaut.usdz"></model-viewer>
 	
 </body>
 </html>
