--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -5,12 +5,6 @@
 </head>
 
 <body>
-<!-- Import the component -->
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<!-- Use it like any other HTML element -->
-
-<model-viewer src="RobotExpressive.glb" ar ar-modes="scene-viewer" ar-scale="auto" camera-controls alt="A 3D model of an astronaut" skybox-image="aircraft_workshop_01_1k.hdr" ios-src="../shared-assets/models/Astronaut.usdz"></model-viewer>
-	
+<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;"><img src="Pipe2Final.png" width=400></a>	
 </body>
 </html>
