--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -5,6 +5,6 @@
 </head>
 
 <body>
-<a href=intent://arvr.google.com/scene-viewer/1.0?mode=ar_only&file=https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;end;"><img src="Pipe2Final.png" width=400></a>	
+<a href=intent://arvr.google.com/scene-viewer/1.0?mode=ar_only&file=https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;end;><img src="Pipe2Final.png" width=400></a>	
 </body>
 </html>
