--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
-<a href="intent://arvr.google.com/scene-viewer/1.0?mode=ar_only&file=https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;end;"><img src="Pipe4Final.png" width=400></a>	
+	
+<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;"><img src="Pipe3Final.png" width=400></a>	
 </body>
 </html>
