--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -11,7 +11,7 @@ src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
 </script>
 	
-	<model-viewer ar src="RobotExpressive.glb"
+	<model-viewer ar src="https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb"
               alt="this is a 3d model">
 </model-viewer>
 </body>
