--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -11,8 +11,9 @@ src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
 </script>
 	
-	<model-viewer ar src="https://github.com/sewa1kman/TestChelPipe/raw/master/RobotExpressive.glb"
-              alt="this is a 3d model">
+	<model-viewer 
+src="https://cdn.glitch.com/ea8aad0f-c4ad-4fee-b2aa-0174986b2895%2Fchair.glb?v=1569230891112"
+alt="a 3D model of a chair" auto-rotate camera-controls background-color="#ffffff" ar magic-leap unstable-webxr>
 </model-viewer>
 </body>
 </html>
