--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>AndroidTest</title>
-	<script type="module"
-src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-<script 
-nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
-</script>
+	<title>Каталог продукции компании ЧТПЗ</title>
 </head>
 
 <body>
+	<h1>Тестовый каталог продукции IOS</h1>
+	<p>Тестовый каталог продукции IOS</p>
+	<a rel="ar" href="banner.usdz" >
+		<img src="Pipe1Final.png" width=400>
+	</a>
 	
 	
-<model-viewer 
-src="https://cdn.glitch.com/ea8aad0f-c4ad-4fee-b2aa-0174986b2895%2Fchair.glb?v=1569230891112"
-alt="a 3D model of a chair" auto-rotate camera-controls background-color="#ffffff" ar magic-leap unstable-webxr>
-</model-viewer>
+	
+
 </body>
 </html>
