--- a/NewTestPage.html
+++ b/NewTestPage.html
@@ -7,7 +7,7 @@
 	<h1>Тестовый каталог продукции IOS</h1>
 	<p>Тестовый каталог продукции IOS</p>
 	<a rel="ar" href="banner.usdz" >
-		<img src="Pipe1Final.jpg" width=400>
+		<img src="Pipe1Final.png" width=400>
 	</a>
 	
 	
